@@ -285,6 +285,15 @@ Tools that are written in languages other than Objective-C, or are developed
 to work with other runtime environments may have their own directory within
 the Tools directory (for example: @file{Tools/Java}).
 
+@node share,  , Tools, Description
+@subsection share
+
+The share directory is used for configuration and installation
+of the core GNUstep libraries and any additional libraries that
+need configuration information. It is used by the configure (autoconf)
+program.
+
+
 @node Library,  , Tools, Description
 @subsection Library
 
