@@ -191,7 +191,7 @@ GNUSTEP_SERVICES             = $(GNUSTEP_INSTALLATION_DIR)/Library/Services
 GNUSTEP_HEADERS              = $(GNUSTEP_INSTALLATION_DIR)/Library/Headers
 GNUSTEP_BUNDLES 	     = $(GNUSTEP_INSTALLATION_DIR)/Library/Bundles
 GNUSTEP_FRAMEWORKS	     = $(GNUSTEP_INSTALLATION_DIR)/Library/Frameworks
-GNUSTEP_PALETTES 	     = $(GNUSTEP_INSTALLATION_DIR)/Developer/Palettes
+GNUSTEP_PALETTES 	     = $(GNUSTEP_LIBRARY)/ApplicationSupport/Palettes
 GNUSTEP_LIBRARIES            = $(GNUSTEP_INSTALLATION_DIR)/Library/Libraries
 GNUSTEP_RESOURCES            = $(GNUSTEP_INSTALLATION_DIR)/Library/Libraries/Resources
 GNUSTEP_JAVA                 = $(GNUSTEP_INSTALLATION_DIR)/Library/Libraries/Java
